fix Router annotations and update swagger docs
